# waylandcpp-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libs/cpp/: CMakeLists.txt
libs/cpp/include/cpp/: comments.hpp  format.hpp  keywords.hpp  specification.hpp  symbols.hpp
libs/cpp/include/cpp/declaration/: access_mod.hpp  class.hpp  container.hpp  cppgen.hpp  declarator.hpp  document.hpp  enum.hpp  file.hpp  function.hpp  includes.hpp  init_declarator_list.hpp  initializer.hpp  namespace.hpp  simple_decl.hpp  simple_declarator.hpp  specifier.hpp  statement.hpp  type_alias.hpp
libs/cpp/include/cpp/definition/: definition.hpp
libs/cpp/include/cpp/transform/: text.hpp
src/: CMakeLists.txt  cppbuilder.cpp  cppbuilder.hpp  main.cpp  protocol.cpp  protocol.hpp  wire_types.hpp  wlstream.cpp  wlstream.hpp
